--- a/index.html
+++ b/index.html
@@ -320,6 +320,9 @@
 <abbr>  </abbr><li class="flag _Tibet">Tibet</li><br/>
 <abbr>  </abbr><li class="flag _United_Nations">United Nations</li><br/>
 <abbr>  </abbr><li class="flag _Wales">Wales</li><br/>
+<abbr>  </abbr><li class="flag _Klingon">Klingon</li><br/>
+<abbr>  </abbr><li class="flag _United_Federation_of_Planets">United Federation of Planets</li><br/>
+<abbr>  </abbr><li class="flag _Pirate">Pirate</li><br/>
 </ul>
 
 <ul class="f32">
@@ -620,6 +623,9 @@
 <abbr>  </abbr><li class="flag _Tibet">Tibet</li><br/>
 <abbr>  </abbr><li class="flag _United_Nations">United Nations</li><br/>
 <abbr>  </abbr><li class="flag _Wales">Wales</li><br/>
+<abbr>  </abbr><li class="flag _Klingon">Klingon</li><br/>
+<abbr>  </abbr><li class="flag _United_Federation_of_Planets">United Federation of Planets</li><br/>
+<abbr>  </abbr><li class="flag _Pirate">Pirate</li><br/>
 </ul>
 
 </body>
