offset fixed for pirate, +DOOP, +Starfleet

--- a/index.html
+++ b/index.html
@@ -323,6 +323,9 @@
 <abbr>  </abbr><li class="flag _Klingon">Klingon</li><br/>
 <abbr>  </abbr><li class="flag _United_Federation_of_Planets">United Federation of Planets</li><br/>
 <abbr>  </abbr><li class="flag _Pirate">Pirate</li><br/>
+<abbr>  </abbr><li class="flag _Starfleet">Starfleet</li><br/>
+<abbr>  </abbr><li class="flag _DOOP">D.O.O.P.</li><br/>
+
 </ul>
 
 <ul class="f32">
@@ -624,8 +627,11 @@
 <abbr>  </abbr><li class="flag _United_Nations">United Nations</li><br/>
 <abbr>  </abbr><li class="flag _Wales">Wales</li><br/>
 <abbr>  </abbr><li class="flag _Klingon">Klingon</li><br/>
-<abbr>  </abbr><li class="flag _United_Federation_of_Planets">United Federation of Planets</li><br/>
+<abbr>  </abbr><li class="flag _United_Federation_of_Planets">United
+  Federation of Planets</li><br/>
+<abbr>  </abbr><li class="flag _Starfleet">Starfleet</li><br/>
 <abbr>  </abbr><li class="flag _Pirate">Pirate</li><br/>
+<abbr>  </abbr><li class="flag _DOOP">D.O.O.P.</li><br/>
 </ul>
 
 </body>
