added GoT banners

--- a/index.html
+++ b/index.html
@@ -326,6 +326,16 @@
 <abbr>  </abbr><li class="flag _Starfleet">Starfleet</li><br/>
 <abbr>  </abbr><li class="flag _DOOP">D.O.O.P.</li><br/>
 
+<abbr>  </abbr><li class="flag _GoT_Arryn">Arryn</li><br/>
+<abbr>  </abbr><li class="flag _GoT_Baratheon">Baratheon</li><br/>
+<abbr>  </abbr><li class="flag _GoT_Greyjoy">Greyjoy</li><br/>
+<abbr>  </abbr><li class="flag _GoT_Lannister">Lannister</li><br/>
+<abbr>  </abbr><li class="flag _GoT_Martell">Martell</li><br/>
+<abbr>  </abbr><li class="flag _GoT_Stark">Stark</li><br/>
+<abbr>  </abbr><li class="flag _GoT_Targaryen">Targaryen</li><br/>
+<abbr>  </abbr><li class="flag _GoT_Tully">Tully</li><br/>
+<abbr>  </abbr><li class="flag _GoT_Tyrell">Tyrell</li><br/>
+
 </ul>
 
 <ul class="f32">
@@ -632,6 +642,17 @@
 <abbr>  </abbr><li class="flag _Starfleet">Starfleet</li><br/>
 <abbr>  </abbr><li class="flag _Pirate">Pirate</li><br/>
 <abbr>  </abbr><li class="flag _DOOP">D.O.O.P.</li><br/>
+
+<abbr>  </abbr><li class="flag _GoT_Arryn">Arryn</li><br/>
+<abbr>  </abbr><li class="flag _GoT_Baratheon">Baratheon</li><br/>
+<abbr>  </abbr><li class="flag _GoT_Greyjoy">Greyjoy</li><br/>
+<abbr>  </abbr><li class="flag _GoT_Lannister">Lannister</li><br/>
+<abbr>  </abbr><li class="flag _GoT_Martell">Martell</li><br/>
+<abbr>  </abbr><li class="flag _GoT_Stark">Stark</li><br/>
+<abbr>  </abbr><li class="flag _GoT_Targaryen">Targaryen</li><br/>
+<abbr>  </abbr><li class="flag _GoT_Tully">Tully</li><br/>
+<abbr>  </abbr><li class="flag _GoT_Tyrell">Tyrell</li><br/>
+
 </ul>
 
 </body>
