--- a/index.html
+++ b/index.html
@@ -336,6 +336,8 @@
 <abbr>  </abbr><li class="flag _GoT_Tully">Tully</li><br/>
 <abbr>  </abbr><li class="flag _GoT_Tyrell">Tyrell</li><br/>
 
+<abbr>  </abbr><li class="flag _Esperanto">Esperanto</li><br/>
+
 </ul>
 
 <ul class="f32">
@@ -652,6 +654,8 @@
 <abbr>  </abbr><li class="flag _GoT_Targaryen">Targaryen</li><br/>
 <abbr>  </abbr><li class="flag _GoT_Tully">Tully</li><br/>
 <abbr>  </abbr><li class="flag _GoT_Tyrell">Tyrell</li><br/>
+
+<abbr>  </abbr><li class="flag _Esperanto">Esperanto</li><br/>
 
 </ul>
 
