add diego garcia, remove Ceuta and Melilla (they use different flags)

--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
 <abbr>DM</abbr><li class="flag dm">Dominica</li><br/>
 <abbr>DO</abbr><li class="flag do">Dominican Republic</li><br/>
 <abbr>DZ</abbr><li class="flag dz">Algeria</li><br/>
-<abbr>  </abbr><li class="flag ea island"><i>EA</i>Ceuta and Melilla (ES)</li><br/>
 <abbr>EC</abbr><li class="flag ec">Ecuador</li><br/>
 <abbr>EE</abbr><li class="flag ee">Estonia</li><br/>
 <abbr>EG</abbr><li class="flag eg">Egypt</li><br/>
@@ -337,6 +336,7 @@
 <abbr>  </abbr><li class="flag _GoT_Tyrell">Tyrell</li><br/>
 
 <abbr>  </abbr><li class="flag _Esperanto">Esperanto</li><br/>
+<abbr>DG</abbr><li class="flag dg">Diego Garcia</li><br/>
 <!-- DO NOT REMOVE THIS LINE - AUTOMATIC INSERTION MARK -->
 
 </ul>
@@ -410,7 +410,6 @@
 <abbr>DM</abbr><li class="flag dm">Dominica</li><br/>
 <abbr>DO</abbr><li class="flag do">Dominican Republic</li><br/>
 <abbr>DZ</abbr><li class="flag dz">Algeria</li><br/>
-<abbr>  </abbr><li class="flag ea island"><i>EA</i>Ceuta and Melilla (ES)</li><br/>
 <abbr>EC</abbr><li class="flag ec">Ecuador</li><br/>
 <abbr>EE</abbr><li class="flag ee">Estonia</li><br/>
 <abbr>EG</abbr><li class="flag eg">Egypt</li><br/>
@@ -657,6 +656,7 @@
 <abbr>  </abbr><li class="flag _GoT_Tyrell">Tyrell</li><br/>
 
 <abbr>  </abbr><li class="flag _Esperanto">Esperanto</li><br/>
+<abbr>DG</abbr><li class="flag dg">Diego Garcia</li><br/>
 <!-- DO NOT REMOVE THIS LINE - AUTOMATIC INSERTION MARK -->
 
 </ul>
