more missing flags

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 <abbr>JM</abbr><li class="flag jm">Jamaica</li><br/>
 <abbr>JO</abbr><li class="flag jo">Jordan</li><br/>
 <abbr>JP</abbr><li class="flag jp">Japan</li><br/>
+<abbr>  </abbr><li class="flag jt island"><i>JT</i>Johnston Island</li><br/>
 <abbr>KE</abbr><li class="flag ke">Kenya</li><br/>
 <abbr>KG</abbr><li class="flag kg">Kyrgyzstan</li><br/>
 <abbr>KH</abbr><li class="flag kh">Cambodia</li><br/>
@@ -334,6 +335,9 @@
 <abbr>  </abbr><li class="flag _GoT_Tyrell">Tyrell</li><br/>
 
 <abbr>  </abbr><li class="flag _Esperanto">Esperanto</li><br/>
+<abbr>MP</abbr><li class="flag mp">Northern Mariana Islands</li><br/>
+<abbr>NF</abbr><li class="flag nf">Norfolk Island</li><br/>
+<abbr>NU</abbr><li class="flag nu">Niue</li><br/>
 <!-- DO NOT REMOVE THIS LINE - AUTOMATIC INSERTION MARK -->
 
 </ul>
@@ -461,6 +465,7 @@
 <abbr>JM</abbr><li class="flag jm">Jamaica</li><br/>
 <abbr>JO</abbr><li class="flag jo">Jordan</li><br/>
 <abbr>JP</abbr><li class="flag jp">Japan</li><br/>
+<abbr>  </abbr><li class="flag jt island"><i>JT</i>Johnston Island</li><br/>
 <abbr>KE</abbr><li class="flag ke">Kenya</li><br/>
 <abbr>KG</abbr><li class="flag kg">Kyrgyzstan</li><br/>
 <abbr>KH</abbr><li class="flag kh">Cambodia</li><br/>
@@ -651,6 +656,9 @@
 <abbr>  </abbr><li class="flag _GoT_Tyrell">Tyrell</li><br/>
 
 <abbr>  </abbr><li class="flag _Esperanto">Esperanto</li><br/>
+<abbr>MP</abbr><li class="flag mp">Northern Mariana Islands</li><br/>
+<abbr>NF</abbr><li class="flag nf">Norfolk Island</li><br/>
+<abbr>NU</abbr><li class="flag nu">Niue</li><br/>
 <!-- DO NOT REMOVE THIS LINE - AUTOMATIC INSERTION MARK -->
 
 </ul>
