--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
 <abbr>  </abbr><li class="flag _GoT_Tyrell">Tyrell</li><br/>
 
 <abbr>  </abbr><li class="flag _Esperanto">Esperanto</li><br/>
+<abbr>  </abbr><li class="flag _OGS">Online Go Server</li><br/>
 <!-- DO NOT REMOVE THIS LINE - AUTOMATIC INSERTION MARK -->
 
 </ul>
@@ -653,6 +654,7 @@
 <abbr>  </abbr><li class="flag _GoT_Tyrell">Tyrell</li><br/>
 
 <abbr>  </abbr><li class="flag _Esperanto">Esperanto</li><br/>
+<abbr>  </abbr><li class="flag _OGS">Online Go Server</li><br/>
 <!-- DO NOT REMOVE THIS LINE - AUTOMATIC INSERTION MARK -->
 
 </ul>
