--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@
 
 <abbr>  </abbr><li class="flag _Esperanto">Esperanto</li><br/>
 <abbr>  </abbr><li class="flag _OGS">Online Go Server</li><br/>
+<abbr>LH</abbr><li class="flag lh">Lord Howe Island</li><br/>
 <!-- DO NOT REMOVE THIS LINE - AUTOMATIC INSERTION MARK -->
 
 </ul>
@@ -655,6 +656,7 @@
 
 <abbr>  </abbr><li class="flag _Esperanto">Esperanto</li><br/>
 <abbr>  </abbr><li class="flag _OGS">Online Go Server</li><br/>
+<abbr>LH</abbr><li class="flag lh">Lord Howe Island</li><br/>
 <!-- DO NOT REMOVE THIS LINE - AUTOMATIC INSERTION MARK -->
 
 </ul>
