--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
 <abbr>  </abbr><li class="flag _Esperanto">Esperanto</li><br/>
 <abbr>  </abbr><li class="flag _OGS">Online Go Server</li><br/>
 <abbr>LH</abbr><li class="flag lh">Lord Howe Island</li><br/>
+<abbr>  </abbr><li class="flag _cat">Catalonia</li><br/>
 <!-- DO NOT REMOVE THIS LINE - AUTOMATIC INSERTION MARK -->
 
 </ul>
@@ -657,6 +658,7 @@
 <abbr>  </abbr><li class="flag _Esperanto">Esperanto</li><br/>
 <abbr>  </abbr><li class="flag _OGS">Online Go Server</li><br/>
 <abbr>LH</abbr><li class="flag lh">Lord Howe Island</li><br/>
+<abbr>  </abbr><li class="flag _cat">Catalonia</li><br/>
 <!-- DO NOT REMOVE THIS LINE - AUTOMATIC INSERTION MARK -->
 
 </ul>
