--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
 <abbr>  </abbr><li class="flag _OGS">Online Go Server</li><br/>
 <abbr>LH</abbr><li class="flag lh">Lord Howe Island</li><br/>
 <abbr>  </abbr><li class="flag _cat">Catalonia</li><br/>
+<abbr>  </abbr><li class="flag _LGBT">LGBT+ Pride</li><br/>
 <!-- DO NOT REMOVE THIS LINE - AUTOMATIC INSERTION MARK -->
 
 </ul>
@@ -659,6 +660,7 @@
 <abbr>  </abbr><li class="flag _OGS">Online Go Server</li><br/>
 <abbr>LH</abbr><li class="flag lh">Lord Howe Island</li><br/>
 <abbr>  </abbr><li class="flag _cat">Catalonia</li><br/>
+<abbr> </abbr><li class="flag _LGBT">LGBT+ Pride</li><br/>
 <!-- DO NOT REMOVE THIS LINE - AUTOMATIC INSERTION MARK -->
 
 </ul>
